--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-PyQt6==6.6.1
 numpy==1.26.4
 sympy==1.12
 Pillow==10.3.0
 matplotlib==3.9.0
 openai==1.90.0
-
-PySide6~=6.9.1
+PySide6==6.7.0
+google-generativeai==0.5.4
